# llm_poc

./: .gitignore  .pre-commit-config.yaml  README.md  collect_aws_command_ref.py  how_to_config.md  pyproject.toml  report_doc_num.md  report_exec_command_contextless.md  requirements.txt  single_document.py  validate_doc_num.py
aws_context/: urls.txt
conf/: _test.toml  beta.toml  interactive.toml  qa.toml  qa_answering.toml  single.toml  single_tool_conflict_chat.toml  single_tool_conflict_chat_timestampless.toml  single_tool_union_context.toml  test.toml  two_tool_two_con.toml
eval_sentence/: conflict.yaml  evaluation_human_answer.yaml  evaluation_human_eval.yaml  evaluation_rule.yaml  indexless_predictor.yaml  qa1_ai_answer.yaml  test.yaml  test_ai_answer.yaml
qa/: qa2.yaml  test.yaml
repo/: contextless_request_with_usercontext.md  conversational.md  doc_num.md  evaluation_rules.md  exec_command_context.md  exec_command_contextless.md  indexless_predictor.md  preprocess.md  report_contextless_request_with_usercontext.md  report_conversational.md  report_conversational_pickup.md  report_doc_num.md  report_evaluation.md  report_evaluation_rules.md  report_exec_command_contextless.md  report_preprocess.md  solve_context_confliction.md
script/: ntpdate.sh  run_beta_sv.sh  run_co_sv.sh  stop_beta_sv.sh  stop_co_sv.sh
src/: api.py  content_observer.py  context_observer.py  create_aws_index.py  create_user_index.py  validate.py  validate1.py  validate2.py  validate_api.py  validate_ci.py  validate_doc_num.py  validate_exec_command_context.py  validate_index.py  (+2 more)
(+104 files in other folders)
